--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "license": "MIT",
   "scripts": {
     "test": "",
-    "start": "node server",
+    "start": "node dist/server",
     "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --profile --colors"
   },
   "dependencies": {
     "babel-cli": "^6.4.0",
     "babel-core": "^6.22.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "rollbar": "^0.6.2",
+    "webpack-node-externals": "^1.5.4"
   },
   "devDependencies": {
     "babel-loader": "^6.2.3",
